--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,14 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one: 
+ username: "turbulence6th"
+ password_digest: "oguzTanrikulu123"
+ name: "oguz"
+ surname: "tanrikulu"
+ email: "oguz.tanrikulu@metu.edu.tr"
+ phone: "538-3595977"
+ role: "admin"
+ gender: "male"
+ verified: true
+ bulletin: true
