--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,12 +5,13 @@
 # below each fixture, per the syntax in the comments below
 #
 one: 
- username: "turbulence6th"
- name: "oguz"
- surname: "tanrikulu"
- email: "oguz.tanrikulu@metu.edu.tr"
- phone: "538-3595977"
- role: "admin"
- gender: "male"
+ username: turbulence6th
+ password_digest: <%= BCrypt::Password.create('oguzTanrikulu123') %>
+ name: oguz
+ surname: tanrikulu
+ email: oguz.tanrikulu@metu.edu.tr
+ phone: 538-3595977
+ role: admin
+ gender: male
  verified: true
  bulletin: true
