--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,5 @@ test:
 production:
   <<: *default
   username: rails
-  password: jZMJHIVhRH
+  password: EOhsHuNjvr
   database: campusilan_production
